Fix navbar mobile alignment

--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -16,11 +16,6 @@
   @media screen and (min-width: 1300px) {
     width: 1200px;
   }
-
-  // Mobile
-  @media screen and (max-width: 1100px) {
-    justify-content: center;
-  }
 }
 
 .links_container {
