--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50%;
+  max-width: 35em;
 }
 
 .hero_content {
